Fix image overflow

--- a/src/components/NewPostModal/NewPostModal.module.css
+++ b/src/components/NewPostModal/NewPostModal.module.css
@@ -24,14 +24,15 @@
   flex-direction: column;
   height: 100%;
   box-sizing: content-box;
+  min-height: 0;
 }
 
 .uploadSection {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex: 1;
 }
 
 .uploadText {
@@ -47,10 +48,6 @@
   gap: 0.6rem;
 }
 
-.hidden {
-  visibility: hidden;
-}
-
 .captionTextarea {
   font-size: 1rem;
 }
@@ -60,7 +57,6 @@
   overflow: hidden;
   position: relative;
   display: flex;
-  position: relative;
 }
 
 .image {
